[package]
name = "serbian-cyrillic-latin-conversion"
version = "1.0.2"
edition = "2021"
authors = ["Gleb Kiselev"]
description = "Serbian Cyrillic to Latin and Latin to Cyrillic conversion library"
license = "MIT"
repository = "https://github.com/Glebkiselev11/serbian-cyrillic-latin-convertion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
